fixed header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-/* ADD VARIABLES */
-
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,200,600|Hammersmith+One);
 #contact {
   margin-top: -15px !important;
   z-index: 5000;
@@ -112,7 +111,6 @@ h5 {
 body {
   -webkit-font-smoothing: antialiased;
   font: normal 15px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  padding-top: 10px; 
 }
 .marginRight div {
   margin-right: 0%; }
